<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RoomListActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_name"
            android:textSize="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="right"
            android:layout_marginRight="10dp">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/refresh"
                android:src="@drawable/refresh_btn"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:layout_marginRight="10dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search"
                android:src="@drawable/search_btn"
                android:background="@android:color/transparent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roomNum"
                android:id="@+id/roomNum"
                android:textSize="20sp"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masterId"
                android:id="@+id/masterId"
                android:textSize="20sp"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:dividerHeight="1dp"
            android:id="@+id/roomList">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make"
                android:id="@+id/makeRoomButton"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:id="@+id/enterButton"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/logoutButton"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
